tests/ui/crate-loading/invalid-rlib.stderr
error[E0786]: found invalid metadata files for crate `foo`
  --> $DIR/invalid-rlib.rs:7:7
   |
LL | use ::foo;
   |       ^^^
   |
   = note: failed to mmap file 'auxiliary/libfoo.rlib'

error[E0786]: found invalid metadata files for crate `foo`
  --> $DIR/invalid-rlib.rs:7:7
   |
LL | use ::foo;
   |       ^^^
   |
   = note: failed to mmap file 'auxiliary/libfoo.rlib'
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0786`.
